agregado div contenedor

--- a/prueba 1 de index.html
+++ b/prueba 1 de index.html
@@ -7,6 +7,10 @@
     <title>Git</title>
 </head>
 <body>
-    
+    <!--DIV CONTENEDOR1-->
+    <div class="container">
+        <div class="row"></div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, quam?</p>
+    </div>
 </body>
 </html>
